Fixed spacing to be even when resizing window. Static size for cats.

--- a/css/adoption.css
+++ b/css/adoption.css
@@ -8,29 +8,16 @@
 .adoption_display{
     border: solid black 2px;
     border-radius: 15px;
-    width: 20%;
-    min-width: 200px;
+    width: 350px;
     float: left;
     margin-top: 60px;
 }
 
-#adoption_display_left{
-    margin-left: calc(5% - 50px);
-}
-
-#adoption_display_center{
-    margin-left: calc(5% - 50px);
-    margin-right: calc(5% - 50px);
-}
-
-#adoption_display_right{
-    margin-right: calc(5% - 50px);
-}
-
 #adoption_page{
     float: left;
-    min-width: 600px;
-    max-width: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 aside{
@@ -42,7 +29,7 @@ aside{
 
 .cat_image{
     width: 100%;
-    height: 250px;
+    height: 350px;
     border-bottom: solid black 2px;
     border-radius: 15px 15px 0px 0px;
 }
@@ -59,6 +46,13 @@ aside{
     font-size: 36px;
     margin-bottom: 15px;
     margin-top: -25px;
+}
+
+#right_icon{
+    width:10%;
+    min-width: 210px;
+    float: right;
+    margin-top: 200px;
 }
 
 main{
@@ -83,7 +77,7 @@ main{
     height: 20px;
     min-width: 200px;
     float: right;
-    margin-right: calc(30% - 165px);
+    margin-right: calc(25% - 150px);
     margin-bottom: 0px;
     margin-top: 10px;
 }
